Restyle #comment-text on show.js to prevent offscreen text

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -40,6 +40,10 @@ footer a:hover {
     margin: 15px 0px;
 }
 
+.comment-row {
+    padding-bottom: 25px;
+}
+
 .comment-row:hover {
     background-color: #f2f2f2;
 }
@@ -69,7 +73,7 @@ footer a:hover {
     font-family: Pacifico;
     font-size: 2.5rem;
     padding: 6px;
-    background: linear-gradient(to right, #ffeded, white);
+    background: linear-gradient(to right, #ffeded, white); /* checkfor firefox, IE and the gradient */
         background-position-x: initial;
         background-position-y: initial;
         background-size: initial;
@@ -81,7 +85,7 @@ footer a:hover {
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-}
+} 
 
 
 /* Id's sorted alphabetically */
@@ -91,8 +95,9 @@ footer a:hover {
 }
 
 #comment-text {
-    display: inline;
-    white-space: nowrap;
+    position: absolute; 
+    margin: 0% 3%;
+    padding-left: 1%;
 }
 
 #delete-comment-btn {
